architecture-ide/tests/fixtures/negative/S5_sync_references_one_concept.sync
sync InternalOnly

  when
    Counter/inc: [ ] => [ total: ?total ]
  then
    Counter/inc: [ amount: ?total ]
